# clear-sky

./: .clang-format  Aero.cpp  Aero.h  CMakeLists.txt  CMakePresets.json  Cloud.cpp  Cloud.h  CloudTrail.cpp  CloudTrail.h  Fence.cpp  Fence.h  House.cpp  House.h  Icosahedron.cpp  Icosahedron.h  Makefile  Materials.h  Pine.cpp  Pine.h  Shape.cpp  Shape.h  SimpleShape.cpp  SimpleShape.h  Turbo.cpp  Turbo.h  WorldMain.cpp  WorldWidget.cpp  WorldWidget.h  WorldWindow.cpp  WorldWindow.h  markus.ppm  world.pro
source/main/: main.cpp
source/utilities/: materials.hpp
source/widgets/: gui.cpp  gui.hpp  world_widget.cpp  world_widget.hpp
source/world/: aero.cpp  aero.hpp  cloud.cpp  cloud.hpp  contrail.cpp  contrail.hpp  fence.cpp  fence.hpp  house.cpp  house.hpp  icosahedron.cpp  icosahedron.hpp  pine.cpp  pine.hpp  shape.cpp  shape.hpp  simple_shape.cpp  simple_shape.hpp  turbo.cpp  turbo.hpp
